# ATOMFLOW

./: .gitignore  README.md
Image_analysis/: README.md  design_1.tcl  restoutput.txt  test_16_runtime.ipynb
Image_analysis/src/: image_analysis.cpp  image_analysis.hpp  test.cpp
Image_analysis/test_cases/10x10/: fullImage_output.txt  restoutput.txt
Image_analysis/test_cases/12x12/: fullImage_output.txt  restoutput.txt
Image_analysis/test_cases/16x16/: emissions_output.txt  fullImage_output.txt  restoutput.txt
Image_analysis/test_cases/24x24/: fullImage_output.txt  restoutput.txt
Image_analysis/test_cases/28x28/: fullImage_output.txt  restoutput.txt
Image_analysis/test_cases/40x40/: fullImage_output.txt
atomflow_controller/: atomflow_control.ipynb  atomflow_control.py  atomflow_controller.cpp  build_bitstream.tcl  create_bd.tcl  hls_config_atomflow.cfg  hls_run_atomflow_controller.py  input_read.py  recreate_project.tcl
atomflow_controller/.vitis_ws_atomflow_mpl4mjhg/atomflow_controller_2024_2/atomflow_controller_2024_2/hls/.autopilot/db/driver/src/: CMakeLists.txt
atomflow_controller/src/: atomflow_controller.hpp  tb_atomflow_controller.cpp
sorting-organized-main/: hls_run_sortLattice_AXI_2024.2.py  sortingLattice.ipynb
sorting-organized-main/Bitstream/: design_1.hwh  sortLattice_AXI_axi_control_s_axi.vhd
sorting-organized-main/Bitstream_movelist/: .sortLattice_AXI_axi_control_s_axi.vhd.swp  design_1.hwh  sortLattice_AXI_axi_control_s_axi.vhd
sorting-organized-main/src/: sortLatticeByRow.cpp  sortLatticeByRow.hpp  tb_sortLatticeByRow_AXI.cpp
(+1876 files in other folders)
